--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
             background: linear-gradient(45deg, #ff6b9d, #ffd93d, #6bcf7f, #4d9de0);
             background-size: 300% 300%;
-             background: url('./images/birthday_background_20251003194013_1.webp') no-repeat center center fixed;
+             background: url('birthday_background_20251003194013_1.png') no-repeat center center fixed;
             /* animation: gradientShift 10s ease infinite; */
             font-family: 'Comic Sans MS', cursive, sans-serif;
             overflow: hidden;
@@ -200,13 +200,13 @@
         <div class="character-display">
             <!-- Character images will rotate here -->
             <div class="character-image active" style="background: linear-gradient(45deg, #87CEEB, #98FB98); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
-                🎂 <img src="./images/bluey_birthday_20251003193942_1.webp"/> 🎂
+                🎂 <img src="bluey_birthday_20251003193942_1.png"/> 🎂
             </div>
             <div class="character-image" style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
-                🐷 <img src="./images/bluey_peppa_birthday_20251003194004_1.webp" /> 🐷
+                🐷 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🐷
             </div>
             <div class="character-image" style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
-                🎉 <img src="./images/bluey_peppa_birthday_20251003194004_1.webp" /> 🎉
+                🎉 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🎉
             </div>
             <div class="character-image" style="background: linear-gradient(45deg, #FF69B4, #00CED1); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
                 🎈 <h1>Party Time!</h1> 🎈
