--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,7 @@
             padding: 0;
             background: linear-gradient(45deg, #ff6b9d, #ffd93d, #6bcf7f, #4d9de0);
             background-size: 300% 300%;
-             background: url('birthday_background_20251003194013_1.png') no-repeat center center fixed;
+            background: url('birthday_background_20251003194013_1.png') no-repeat center center fixed;
             /* animation: gradientShift 10s ease infinite; */
             font-family: 'Comic Sans MS', cursive, sans-serif;
             overflow: hidden;
@@ -21,9 +22,17 @@
         }
 
         @keyframes gradientShift {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         .birthday-card {
@@ -35,15 +44,28 @@
         .title {
             font-size: 4rem;
             color: #fff;
-            text-shadow: 6px 5px 3px rgba(0,0,0,0.5);
+            text-shadow: 6px 5px 3px rgba(0, 0, 0, 0.5);
             margin-bottom: 20px;
             animation: bounce 2s ease-in-out infinite;
         }
 
         @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-            40% { transform: translateY(-20px); }
-            60% { transform: translateY(-10px); }
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateY(0);
+            }
+
+            40% {
+                transform: translateY(-20px);
+            }
+
+            60% {
+                transform: translateY(-10px);
+            }
         }
 
         .character-display {
@@ -52,7 +74,7 @@
             margin: 20px auto;
             border-radius: 20px;
             border: 5px solid #fff;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             overflow: hidden;
             position: relative;
         }
@@ -81,15 +103,23 @@
         .age {
             font-size: 3rem;
             color: #fff;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             margin: 20px 0;
             animation: pulse 1.5s ease-in-out infinite;
         }
 
         @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
+            0% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.1);
+            }
+
+            100% {
+                transform: scale(1);
+            }
         }
 
         .balloon {
@@ -129,8 +159,15 @@
         }
 
         @keyframes float {
-            0%, 100% { transform: translateY(0px) rotate(-2deg); }
-            50% { transform: translateY(-20px) rotate(2deg); }
+
+            0%,
+            100% {
+                transform: translateY(0px) rotate(-2deg);
+            }
+
+            50% {
+                transform: translateY(-20px) rotate(2deg);
+            }
         }
 
         .confetti {
@@ -156,6 +193,7 @@
                 transform: translateY(-100vh) rotate(0deg);
                 opacity: 1;
             }
+
             100% {
                 transform: translateY(100vh) rotate(360deg);
                 opacity: 0;
@@ -165,20 +203,28 @@
         .message {
             font-size: 2.5rem;
             color: #fff;
-            text-shadow: 3px 3px 2px rgba(0,0,0,0.5);
+            text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
             margin-top: 20px;
             animation: twinkle 2s ease-in-out infinite;
         }
 
         @keyframes twinkle {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.7; }
+
+            0%,
+            100% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0.7;
+            }
         }
     </style>
 </head>
+
 <body>
     <!-- Balloons -->
-    <div class="balloon"></div>
+    <div class="balloon disney"></div>
     <div class="balloon"></div>
     <div class="balloon"></div>
     <div class="balloon"></div>
@@ -196,24 +242,37 @@
 
     <div class="birthday-card">
         <h1 class="title">Happy Birthday Kimberly!</h1>
-        
+
         <div class="character-display">
             <!-- Character images will rotate here -->
-            <div class="character-image active" style="background: linear-gradient(45deg, #87CEEB, #98FB98); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
-                🎂 <img src="bluey_birthday_20251003193942_1.png"/> 🎂
+            <div class="character-image active"
+                style="background: linear-gradient(45deg, #87CEEB, #98FB98); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
+                🎂 <img src="bluey_birthday_20251003193942_1.png" /> 🎂
             </div>
-            <div class="character-image" style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
+            <div class="character-image"
+                style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
                 🐷 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🐷
             </div>
-            <div class="character-image" style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
+            <div class="character-image"
+                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
                 🎉 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🎉
             </div>
-            <div class="character-image" style="background: linear-gradient(45deg, #FF69B4, #00CED1); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
+            <div class="character-image"
+                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
+                🎉 <img src="Frozen.png" /> 🎉
+            </div>
+            <div class="character-image"
+                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
+                🎉 <img src="unicorn.png" /> 🎉
+            </div>            <div class="character-image"
+                style="background: linear-gradient(45deg, #FF69B4, #00CED1); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
                 🎈 <h1>Party Time!</h1> 🎈
             </div>
         </div>
 
-        <div class="age"><h3 class="title">You are 5 today!</h3></div>
+        <div class="age">
+            <h3 class="title">You are 5 today!</h3>
+        </div>
         <div class="message">Hope your special day is amazing! 🎁✨</div>
     </div>
 
@@ -232,12 +291,12 @@
         setInterval(rotateImages, 3000);
 
         // Add click interaction
-        document.querySelector('.character-display').addEventListener('click', function() {
+        document.querySelector('.character-display').addEventListener('click', function () {
             rotateImages();
         });
 
         // Add some sparkle effects on click
-        document.addEventListener('click', function(e) {
+        document.addEventListener('click', function (e) {
             const sparkle = document.createElement('div');
             sparkle.style.position = 'absolute';
             sparkle.style.left = e.clientX + 'px';
@@ -272,4 +331,5 @@
         document.head.appendChild(style);
     </script>
 </body>
+
 </html>
