--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@
 
         .balloon {
             position: absolute;
-            width: 60px;
-            height: 80px;
+            width: 160px;
+            height: 180px;
+            text-align: center;
+            padding-top: 30px;
             border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
             animation: float 3s ease-in-out infinite;
         }
@@ -224,10 +226,10 @@
 
 <body>
     <!-- Balloons -->
-    <div class="balloon disney"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
+    <div class="balloon"><h2>NaiNai & Grandpa</h2></div>
+    <div class="balloon"><h2>Jonathan, Valentina <br/>Lorenzo & Leonardo</h2></div>
+    <div class="balloon"><h2>Christopher Cat & Olivia</h2></div>
+    <div class="balloon"><h2>Sean & Liz</h2></div>
 
     <!-- Confetti -->
     <div class="confetti" style="left: 10%; animation-delay: 0s;"></div>
