--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
 
         .title {
-            font-size: 4rem;
+            font-size: 2rem;
             color: #fff;
             text-shadow: 6px 5px 3px rgba(0, 0, 0, 0.5);
             margin-bottom: 20px;
@@ -125,6 +125,8 @@
         .balloon {
             position: absolute;
             width: 160px;
+            top: 0px;
+            /* left: 0; */
             height: 180px;
             text-align: center;
             padding-top: 30px;
@@ -134,29 +136,29 @@
 
         .balloon:nth-child(1) {
             background: #ff6b9d;
-            top: 10%;
-            left: 10%;
+            /* top: 10%; */
+            left: 5%;
             animation-delay: 0s;
         }
 
         .balloon:nth-child(2) {
             background: #4d9de0;
-            top: 20%;
-            right: 10%;
+            /* top: 10%; */
+            right: 5%;
             animation-delay: 1s;
         }
 
         .balloon:nth-child(3) {
             background: #6bcf7f;
-            bottom: 20%;
-            left: 15%;
+            top: 80vh;
+            left: 1%;
             animation-delay: 2s;
         }
 
         .balloon:nth-child(4) {
             background: #ffd93d;
-            bottom: 10%;
-            right: 15%;
+            top: 80vh;
+            right: 10%;
             animation-delay: 0.5s;
         }
 
@@ -226,10 +228,18 @@
 
 <body>
     <!-- Balloons -->
-    <div class="balloon"><h2>NaiNai & Grandpa</h2></div>
-    <div class="balloon"><h2>Jonathan, Valentina <br/>Lorenzo & Leonardo</h2></div>
-    <div class="balloon"><h2>Christopher Cat & Olivia</h2></div>
-    <div class="balloon"><h2>Sean & Liz</h2></div>
+    <div class="balloon">
+        <h3>NaiNai & Grandpa</h3>
+    </div>
+    <div class="balloon">
+        <h3>Jonathan, Valentina Lorenzo and Leonardo</h3>
+    </div>
+    <div class="balloon">
+        <h3><br />Chris, Cat & Olivia</h3>
+    </div>
+    <div class="balloon">
+        <h3><br /> Sean & Liz</h3>
+    </div>
 
     <!-- Confetti -->
     <div class="confetti" style="left: 10%; animation-delay: 0s;"></div>
@@ -243,7 +253,7 @@
     <div class="confetti" style="left: 90%; animation-delay: 4s;"></div>
 
     <div class="birthday-card">
-        <h1 class="title">Happy Birthday Kimberly!</h1>
+        <h3 class="title">Happy Birthday Kimberly!</h3>
 
         <div class="character-display">
             <!-- Character images will rotate here -->
@@ -266,16 +276,16 @@
             <div class="character-image"
                 style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
                 🎉 <img src="unicorn.png" /> 🎉
-            </div>            <div class="character-image"
+            </div>
+            <div class="character-image"
                 style="background: linear-gradient(45deg, #FF69B4, #00CED1); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
                 🎈 <h1>Party Time!</h1> 🎈
             </div>
         </div>
 
         <div class="age">
-            <h3 class="title">You are 5 today!</h3>
+            <h4 class="title"> 🎁✨You are 5 today! You are amazing!</h4>
         </div>
-        <div class="message">Hope your special day is amazing! 🎁✨</div>
     </div>
 
     <script>
