--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         }
 
         .age {
-            font-size: 3rem;
+            /* font-size: 1rem; */
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            margin: 20px 0;
+            margin: 30px 0;
             animation: pulse 1.5s ease-in-out infinite;
         }
 
@@ -150,14 +150,14 @@
 
         .balloon:nth-child(3) {
             background: #6bcf7f;
-            top: 80vh;
+            top: 60vh;
             left: 1%;
             animation-delay: 2s;
         }
 
         .balloon:nth-child(4) {
             background: #ffd93d;
-            top: 80vh;
+            top: 60vh;
             right: 10%;
             animation-delay: 0.5s;
         }
@@ -205,7 +205,7 @@
         }
 
         .message {
-            font-size: 2.5rem;
+            font-size: 1.5rem;
             color: #fff;
             text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
             margin-top: 20px;
@@ -282,9 +282,11 @@
                 🎈 <h1>Party Time!</h1> 🎈
             </div>
         </div>
-
+        <br />
+        <br />
+        <br />
         <div class="age">
-            <h4 class="title"> 🎁✨You are 5 today! You are amazing!</h4>
+            <h2 class="title2"> 🎁✨You are 5 today! <br />You are amazing!</h2>
         </div>
     </div>
 
