--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             margin-bottom: 20px;
             animation: bounce 2s ease-in-out infinite;
         }
+        .title2{
+            text-shadow: 6px 5px 3px rgba(0, 0, 0, 0.5);
+            animation: bounce 2s ease-in-out infinite;
+
+        }
 
         @keyframes bounce {
 
