--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         .title {
             font-size: 2rem;
             color: #fff;
-            text-shadow: 6px 5px 3px rgba(0, 0, 0, 0.5);
+            text-shadow: 4px 3px 3px black;
             margin-bottom: 20px;
             animation: bounce 2s ease-in-out infinite;
         }
         .title2{
-            text-shadow: 6px 5px 3px rgba(0, 0, 0, 0.5);
+            text-shadow: 4px 3px 3px black;
             animation: bounce 2s ease-in-out infinite;
 
         }
