--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             margin-bottom: 20px;
             animation: bounce 2s ease-in-out infinite;
         }
-        .title2{
+
+        .title2 {
             text-shadow: 4px 3px 3px black;
             animation: bounce 2s ease-in-out infinite;
 
@@ -263,26 +264,30 @@
         <div class="character-display">
             <!-- Character images will rotate here -->
             <div class="character-image active"
-                style="background: linear-gradient(45deg, #87CEEB, #98FB98); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
+                <!-- style="background: linear-gradient(45deg, #87CEEB, #98FB98); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;"> -->
                 🎂 <img src="bluey_birthday_20251003193942_1.png" /> 🎂
             </div>
             <div class="character-image"
-                style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
+                <!-- style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;"> -->
                 🐷 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🐷
             </div>
             <div class="character-image"
-                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
+                <!-- style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;"> -->
+                🐷 <img src="peppa_birthday_20251003193953_1.png" /> 🐷
+            </div>
+            <div class="character-image"
+                <!-- style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;"> -->
                 🎉 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🎉
             </div>
             <div class="character-image"
-                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
+                <!-- style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;"> -->
                 🎉 <img src="Frozen.png" /> 🎉
             </div>
             <div class="character-image"
-                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
+                <!-- style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;"> -->
                 🎉 <img src="unicorn.png" /> 🎉
             </div>
-            
+
             <div class="character-image"
                 style="background: linear-gradient(45deg, #FF69B4, #00CED1); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
                 🎈 <h1>Party Time!</h1> 🎈
