--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             padding-top: 30px;
             border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
             animation: float 3s ease-in-out infinite;
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .balloon:nth-child(1) {
@@ -235,16 +236,16 @@
 <body>
     <!-- Balloons -->
     <div class="balloon">
-        <h3>NaiNai & Grandpa</h3>
+        <h3><div>NaiNai</div><div>Grandpa</div></h3>
     </div>
     <div class="balloon">
-        <h3>Jonathan, Valentina Lorenzo and Leonardo</h3>
+        <h3>Jonathan & Valentina <div>Lorenzo</div><div>Leonardo</div></h3>
     </div>
     <div class="balloon">
-        <h3><br />Chris, Cat & Olivia</h3>
+        <h3><br /><div>Chris, Cat</div><div>Olivia</div></h3>
     </div>
     <div class="balloon">
-        <h3><br /> Sean & Liz</h3>
+        <h3><br /><div>Sean & Liz</div></h3>
     </div>
 
     <!-- Confetti -->
