--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             /* left: 0; */
             height: 180px;
             text-align: center;
-            padding-top: 30px;
+            padding-top: 20px;
             border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
             animation: float 3s ease-in-out infinite;
             font-family: 'Times New Roman', Times, serif;
@@ -144,13 +144,12 @@
         .balloon:nth-child(1) {
             background: #ff6b9d;
             /* top: 10%; */
-            left: 5%;
+            left: 2%;
             animation-delay: 0s;
         }
 
         .balloon:nth-child(2) {
             background: #4d9de0;
-            /* top: 10%; */
             right: 5%;
             animation-delay: 1s;
         }
@@ -239,7 +238,7 @@
         <h3><div>NaiNai</div><div>Grandpa</div></h3>
     </div>
     <div class="balloon">
-        <h3>Jonathan & Valentina <div>Lorenzo</div><div>Leonardo</div></h3>
+        <h3>Jonathan & Valentina <div>Lorenzo & Leonardo</div></h3>
     </div>
     <div class="balloon">
         <h3><br /><div>Chris, Cat</div><div>Olivia</div></h3>
