--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-size: 300% 300%;
             background: url('birthday_background_20251003194013_1.png') no-repeat center center fixed;
             /* animation: gradientShift 10s ease infinite; */
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: "Comic Sans MS", "Chalkboard SE", "Comic Neue", cursive;
             overflow: hidden;
             height: 100vh;
             display: flex;
