--- a/index.html
+++ b/index.html
@@ -272,19 +272,19 @@
                 🐷 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🐷
             </div>
             <div class="character-image"
-                <!-- style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;"> -->
+                style="background: linear-gradient(45deg, #FFB6C1, #FFA07A); display: flex; align-items: center; justify-content: center; font-size: 2rem; color: #333;">
                 🐷 <img src="peppa_birthday_20251003193953_1.png" /> 🐷
             </div>
             <div class="character-image"
-                <!-- style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;"> -->
+                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
                 🎉 <img src="bluey_peppa_birthday_20251003194004_1.png" /> 🎉
             </div>
             <div class="character-image"
-                <!-- style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;"> -->
+                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
                 🎉 <img src="Frozen.png" /> 🎉
             </div>
             <div class="character-image"
-                <!-- style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;"> -->
+                style="background: linear-gradient(45deg, #DDA0DD, #F0E68C); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; color: #333;">
                 🎉 <img src="unicorn.png" /> 🎉
             </div>
 
@@ -296,7 +296,7 @@
         <br />
         <br />
         <div class="age">
-            <h2 class="title2"> 🎁✨You are 5 today! <br />You are amazing!</h2>
+            <h1 class="title2"> 🎁✨You are 5 today! <br />You are amazing!</h1>
         </div>
     </div>
 
