--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <div class="confetti" style="left: 90%; animation-delay: 4s;"></div>
 
     <div class="birthday-card">
-        <h3 class="title">Happy Birthday Kimberly!</h3>
+        <h3 class="title">Happy Birthday Kimberly 💖</h3>
 
         <div class="character-display">
             <!-- Character images will rotate here -->
